# bookride-releases

./: .env.example  .gitignore  Jenkinsfile  Jenkinstest.txt  README.md  RELEASE_NOTES.md  app.py  config.yaml  config_loader.py  deployment.txt  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
adr/: ADR-001-architecture.md  ADR-002-DatabaseSchema.md
api/: Dockerfile  __init__.py  b1.pb  book_pb2.py  main.py  models.py  rental_pb2.py  requirements.txt  schemas.py
api/schemas/: book.schema.json  rental.proto
api/tests/: test_books_api.py  test_pricing.py  test_rentals_api.py
backend/: pyproject.toml
backend/api/: Dockerfile  auth.py
backend/api/src/bookandride_api/: config.yaml  core.py  database.py  logging_utils.py  models.py  schemas.py
backend/api/src/bookandride_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/api/src/bookandride_api/schemas/: rental.schema.json
backend/api/src/myproject/: __init__.py
backend/scripts/: seed_users.py
backend/tests/: test_books_api.py  test_metrics.py  test_pricing.py
docs/adr/: ADR-003-Authentication.md
jenkins/: Dockerfile  Jenkinsfile  configMap.sh  plugins.txt
jenkins/init.groovy.d/: 00-create-admin.groovy  01-install-plugins.groovy  (+3 more)
kibana/: saved_objects.ndjson
monitoring/: alerting-webhook.md
nginx/: active-upstream.conf  nginx.conf
ops/: Jenkinsfile  deployment.txt
scripts/: seed_api_keys.py
tests/: conftest.py  test_auth.py  test_auth_jwt.py  test_books_api.py  test_core.py  test_logging.py  test_price.py  test_pricing.py  test_rentals_api.py  test_schemas.py
(+37 files in other folders)
